tests/transpiler/x/cpp/fun_expr_in_let.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/fun_expr_in_let.cpp:5:16: error: non-local lambda expression cannot have a capture-default
    5 | auto square = [=](int x) { return (x * x); };
      |                ^
