tests/transpiler/x/cpp/fun_expr_in_let.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-20 23:05:24 GMT+7
#include <iostream>
#include <string>

auto square = [=](int x) { return (x * x); };

int main() {
    std::cout << std::boolalpha << square(6) << std::endl;
    return 0;
}
